added camera options

--- a/test-cnh/src/app/app.component.html
+++ b/test-cnh/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>Scanner</h1>
 
 <div id="scanner"></div>
+
+<p>onDocumentDetected {{ onDocumentDetected | json }}</p>
+<p>onCaptureButtonClick {{ onCaptureButtonClick | json }}</p>
+<p>onError {{ onError | json }}</p>
