added camera options

--- a/test-cnh/src/app/app.component.html
+++ b/test-cnh/src/app/app.component.html
@@ -2,6 +2,4 @@
 
 <div id="scanner"></div>
 
-<p>onDocumentDetected {{ onDocumentDetected | json }}</p>
-<p>onCaptureButtonClick {{ onCaptureButtonClick | json }}</p>
-<p>onError {{ onError | json }}</p>
+<img [src]="imgBase64" *ngIf="imgBase64" alt="" />
