apply quality render

--- a/test-cnh/src/app/app.component.html
+++ b/test-cnh/src/app/app.component.html
@@ -3,3 +3,5 @@
 <div id="scanner"></div>
 
 <img [src]="imgBase64" *ngIf="imgBase64" alt="" />
+
+<p>Qualidade da imagem: {{ resultOfAnalisys }}</p>
